# hotel-booking_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/hotel/: config.py  settings.py  urls.py
src/hotelbooking/: admin.py  models.py  serializers.py  urls.py  views.py
src/hotelbooking/migrations/: 0001_initial.py
src/tests/: conftest.py  test_bookings.py  test_rooms.py
